# SMPL_Render

./: CMakeLists.txt  LICENSE  glad.c
code/: Camera.h  Lighting.h  Load_SMPL.h  Material.h  Obj_Loader.cpp  Obj_Loader.h  Posemapper.h  Renderer.cpp  Renderer.h  Shader.h  lbs.h  main.cpp
code/shaders/: basic.frag  basic.vs  plane.frag  plane.vs
